# MyBlog

./: .gitignore  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_image_tag_image.py  0003_remove_tag_image.py
core/: models.py  urls.py
myblog/: settings.py  urls.py
templates/: base.html  index.html
templates/blog/: post.html  posts.html
