[tool.poetry]
name = "myblog"
version = "0.1.0"
description = ""
authors = ["Daniil Maltsev <danil.zlatoust9999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
